--- a/src/Logger.Sdk/Logger.Sdk.csproj
+++ b/src/Logger.Sdk/Logger.Sdk.csproj
@@ -9,13 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nexus.Link.Libraries.Azure" Version="1.0.7" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.8" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.6.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Configurations.Sdk\Configurations.Sdk.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Logger.Sdk</PackageId>
-    <PackageVersion>1.1.18</PackageVersion>
+    <PackageVersion>1.1.19</PackageVersion>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -24,6 +29,7 @@
     <Description>SDK for Nexus logging service (only for internal use).</Description>
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <PackageReleaseNotes>
+      1.1.19 Refactor NexusLogger internally for AzureStorageQueue with RestClient to fundamentals as fallback
       1.1.18 Bumped nexus nugets
       1.1.9 Bumped version, verifying new yaml and build.
       1.1.7 Updated dependencies
@@ -32,6 +38,14 @@
       1.1.2 Moved namespace
       1.0.0 First release
     </PackageReleaseNotes>
+    <Version>2.0.1</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
 </Project>
