--- a/test/Logger.Sdk.UnitTest/Logger.Sdk.UnitTest.csproj
+++ b/test/Logger.Sdk.UnitTest/Logger.Sdk.UnitTest.csproj
@@ -10,11 +10,17 @@
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.6.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Logger.Sdk\Logger.Sdk.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Nexus.Link.Libraries.Web.AspNet">
+      <HintPath>..\..\..\..\..\Users\ErikLauraeus\.nuget\packages\nexus.link.libraries.web.aspnet\1.5.2\lib\net461\Nexus.Link.Libraries.Web.AspNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
