--- a/test/Logger.Sdk.UnitTest/Logger.Sdk.UnitTest.csproj
+++ b/test/Logger.Sdk.UnitTest/Logger.Sdk.UnitTest.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-alpha02" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-beta01" />
   </ItemGroup>
 
   <ItemGroup>
