--- a/src/Logger.Sdk/Logger.Sdk.csproj
+++ b/src/Logger.Sdk/Logger.Sdk.csproj
@@ -10,8 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Azure" Version="1.0.7" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.8" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.6.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.8.11" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="3.7.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Logger.Sdk</PackageId>
-    <PackageVersion>1.1.19</PackageVersion>
+    <PackageVersion>1.1.20</PackageVersion>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -29,6 +29,7 @@
     <Description>SDK for Nexus logging service (only for internal use).</Description>
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <PackageReleaseNotes>
+      1.1.20 Bumped nexus nugets
       1.1.19 Refactor NexusLogger internally for AzureStorageQueue with RestClient to fundamentals as fallback
       1.1.18 Bumped nexus nugets
       1.1.9 Bumped version, verifying new yaml and build.
