--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="1.5.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-beta02" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-beta01" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.0.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
