--- a/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
+++ b/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-beta02" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.0" />
   </ItemGroup>
 
   <!--<ItemGroup>
