--- a/src/Logger.Sdk/Logger.Sdk.csproj
+++ b/src/Logger.Sdk/Logger.Sdk.csproj
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Azure" Version="1.0.8" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="1.9.0-beta02" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0-beta01" />
+    <PackageReference Include="Nexus.Link.Libraries.Azure" Version="2.0.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
