--- a/src/Authentication.Sdk/Authentication.Sdk.csproj
+++ b/src/Authentication.Sdk/Authentication.Sdk.csproj
@@ -19,7 +19,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.Sdk</PackageId>
-      <Version>2.0.0-beta04</Version>
+      <Version>2.0.0</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
