--- a/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
+++ b/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
@@ -13,7 +13,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.BusinessEvents.Sdk</PackageId>
-    <Version>2.0.0-beta01</Version>
+    <Version>2.0.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
