--- a/src/Authentication.Sdk/Authentication.Sdk.csproj
+++ b/src/Authentication.Sdk/Authentication.Sdk.csproj
@@ -19,7 +19,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.Sdk</PackageId>
-      <Version>2.0.0</Version>
+      <Version>2.1.0</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -29,6 +29,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.1.0 AuthenticationManager offers RsaKeySizeInBits
         2.0.0 Support refactored Authentication
         1.1.21 Bumped nexus nugets
         1.1.9 Bumped version, consolidating versions
