--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.2.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.3.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.2.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.3.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -24,7 +24,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.AspNet.Sdk</PackageId>
-      <Version>2.1.1</Version>
+      <Version>2.1.2</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -34,6 +34,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.1.2 Bumped nexus nugets
         2.1.1 TokenValidationHandler now uses RsaSecurityKey instead of url to Fundamentals
         2.0.0 Support refactored Authentication
         1.2.33 Bumped nexus nugets
