--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.3.1" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.3.2" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -27,7 +27,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Configurations.Sdk</PackageId>
-      <Version>2.0.0</Version>
+      <Version>2.0.1</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -37,6 +37,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.0.1 Bumped nexus nugets
         2.0.0 Support refactored Authentication
         1.1.21 Bumped nexus nugets
         1.1.9 Bumped version, consolidating versions
