--- a/src/Logger.Sdk/Logger.Sdk.csproj
+++ b/src/Logger.Sdk/Logger.Sdk.csproj
@@ -10,8 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Azure" Version="2.0.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.3.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.3.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Logger.Sdk</PackageId>
-    <Version>2.1.2</Version>
+    <Version>2.1.3</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -29,6 +29,7 @@
     <Description>SDK for Nexus logging service (only for internal use).</Description>
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <PackageReleaseNotes>
+      2.1.3 Bumped nexus nugets
       2.1.2 Introduced named schema for LogMessage.
       2.1.0 Support refactored Authentication
       1.1.22 Bumped nexus nugets
