--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -24,7 +24,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.AspNet.Sdk</PackageId>
-      <Version>2.1.5</Version>
+      <Version>2.1.6</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -34,7 +34,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
-        2.1.5 Support for public keys on .NET Core before 3.0
+        2.1.6 Made constructor parameter optional
         2.1.4 Added missing parameters for UseNexusTokenValidationHandler
         2.1.3 Bumped nexus nugets
         2.1.1 TokenValidationHandler now uses RsaSecurityKey instead of url to Fundamentals
