--- a/test/Services.Controllers.UnitTests/Services.Controllers.UnitTests.csproj
+++ b/test/Services.Controllers.UnitTests/Services.Controllers.UnitTests.csproj
@@ -1,18 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;net472;net461</TargetFrameworks>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.4.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Authentication.Sdk\Authentication.Sdk.csproj" />
+    <ProjectReference Include="..\..\src\Services.Contracts\Services.Contracts.csproj" />
+    <ProjectReference Include="..\..\src\Services.Controllers\Services.Controllers.csproj" />
   </ItemGroup>
 
 </Project>
