--- a/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
+++ b/src/Authentication.PlatformService.AspNet.Sdk/Authentication.PlatformService.AspNet.Sdk.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.2.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.0.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.3.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.3.9" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.2.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.5.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -25,7 +25,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.PlatformService.AspNet.Sdk</PackageId>
-      <Version>1.0.7</Version>
+      <Version>1.0.8</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -35,6 +35,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        1.0.8 Bump
         1.0.7 Refactored NexusTokenValidationHandler
         1.0.5 Support refactored Authentication
       </PackageReleaseNotes>
