--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.4.14" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.2.6" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.5.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.4.20" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.3.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.5.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -24,7 +24,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Authentication.AspNet.Sdk</PackageId>
-      <Version>2.1.19</Version>
+      <Version>2.1.24</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -34,6 +34,8 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.1.24 Bump
+        2.1.20 Added overload of TokenValidationHandler constructor to accept public key as string.
         2.1.19 Bump
         2.1.6 Made constructor parameter optional
         2.1.4 Added missing parameters for UseNexusTokenValidationHandler
