--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="[2.1.1,3.0)" />
-    <PackageReference Include="Nexus.Link.Services.Contracts" Version="1.0.7" />
+    <PackageReference Include="Nexus.Link.Services.Contracts" Version="1.0.8" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,7 +19,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>1.3.4</Version>
+    <Version>1.3.8</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -29,6 +29,10 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.3.8 Minor refactorization of Startup.
+      1.3.7 Bump
+      1.3.6 Added constructor overload for IntegrationCapability.
+      1.3.5 Implemented LoggingLogic for BusinessApi.
       1.3.4 Refactored Startup
       1.2.12 Bump
       1.2.5 Implements Integration both for the business api and for adapters.
