--- a/src/Logger.Sdk/Logger.Sdk.csproj
+++ b/src/Logger.Sdk/Logger.Sdk.csproj
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Logger.Sdk</PackageId>
-    <Version>2.1.11</Version>
+    <Version>2.1.12</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -29,6 +29,7 @@
     <Description>SDK for Nexus logging service (only for internal use).</Description>
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <PackageReleaseNotes>
+      2.1.12 Add LoggingServiceConfiguration for FulcrumLogger
       2.1.11 Bump
       2.1.2 Introduced named schema for LogMessage.
       2.1.0 Support refactored Authentication
