--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>1.9.2</Version>
+    <Version>1.9.3</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -30,6 +30,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.9.3 Added DataSyncMemoryMock.
       1.9.2 Added Events extensions.
       1.9.0 Added Events support
       1.8.1 Moved PublicKeys to token service. Added policy HasMandatoryRole
