--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="[2.1.1,3.0)" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.1.7" />
-    <PackageReference Include="Nexus.Link.Services.Contracts" Version="1.4.0" />
+    <PackageReference Include="Nexus.Link.Services.Contracts" Version="1.5.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>1.10.6</Version>
+    <Version>1.11.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -30,6 +30,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.11.0 Added controller injection.
       1.10.6 Bump
       1.10.0 Moved data sync implementations to Services.Contracts.
       1.9.5 Bump
