--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="[2.1.1,3.0)" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.1.7" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.1.9" />
     <PackageReference Include="Nexus.Link.Services.Contracts" Version="1.5.1" />
   </ItemGroup>
 
@@ -20,7 +20,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>1.12.4</Version>
+    <Version>2.0.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -30,7 +30,8 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      1.12.4 Missing call to overridden method.
+      2.0.0 Updated REST endpoints.
+      1.12.5 Missing call to overridden method.
       1.12.3 New signature for event receiver methods.
       1.12.2 Added events for business API.
       1.11.8 Bump
